# conducator

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  TESTING.md  docker-compose.yml  pyproject.toml
backend/: CLAUDE.md  Dockerfile  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py  ngrok_service.py
backend/app/agent/: __init__.py  mock_agent.py  style_loader.py
backend/app/agent_loop/: brain.py  budget.py  config.py  evidence.py  forked.py  lifecycle.py  pr_brain.py  prompts.py  query_classifier.py  query_markers.py  router.py  service.py  trace.py
backend/app/ai_provider/: __init__.py  base.py  claude_bedrock.py  claude_direct.py  openai_provider.py  prompts.py  resolver.py  router.py  wrapper.py
backend/app/audit/: router.py  schemas.py  service.py
backend/app/auth/: __init__.py  google_service.py  router.py  (+1 more)
backend/config/: conductor.settings.yaml
backend/tests/: conftest.py  test_ado_size_gates.py  test_agent_loop.py  test_agent_loop_integration.py  test_ai_provider.py  test_audit.py  test_auth.py  test_backend_only_tools.py  test_bedrock_tool_repair.py  test_brain.py  test_browser_tools.py  test_budget_controller.py  test_chat.py  test_chat_persistence.py  test_code_review.py  test_code_search.py  test_code_tools.py  test_config_new.py  test_config_paths.py  test_context.py  test_db.py  test_degraded_extraction_signal.py  test_detect_patterns.py  test_dispatch_dimension_worker.py  test_dispatch_subagent.py  test_embedding_provider.py  test_evidence.py  test_forked_agent.py  test_git_workspace.py  test_lifecycle_hooks.py  test_local_tools_parity.py  test_mandatory_dispatch.py  test_pr_brain.py  test_query_classifier.py  test_rag_chunker.py  test_rag_vector_store.py  test_repo_graph.py  test_repo_graph_timeout.py  test_rerank_provider.py  test_room_settings.py  (+14 more)
config/: CLAUDE.md  ENV_REFERENCE.md  conductor.secrets.yaml  conductor.secrets.yaml.example  conductor.settings.yaml  conductor.settings.yaml.example  conductor.yaml.example
config/agent_factory/: _README.md  api_contract.md
config/agents/: classifier.md  concurrency.md  correctness.md  correctness_b.md  explore_architecture.md  explore_code_explanation.md  explore_data_lineage.md  explore_entry_point.md  explore_impact.md  explore_implementation.md  explore_recent_changes.md  explore_root_cause.md  explore_synthesizer.md  explore_usage.md  performance.md  pr_arbitrator.md  pr_subagent_checks.md  reliability.md  security.md  test_coverage.md
config/brains/: pr_review.yaml
config/prompt-library/: SOURCE.md
config/prompts/: explorer_base.md  pr_brain_coordinator.md  pr_subagent_checks.md
config/skills/: pr_brain_coordinator.md
config/swarms/: business_flow.yaml
contracts/: tool_contracts.json
database/: liquibase.properties
database/changelog/: db.changelog-master.yaml
docker/: docker-compose.app.yaml  docker-compose.data.yaml  docker-compose.langfuse.yaml  init-db.sql
docs/: ARCHITECTURE.md  GUIDE.md  GUIDE_ADDENDUM.md  JIRA_TICKET_STANDARD.md  PR_BRAIN_OPTIMIZATION.md  PR_BRAIN_V2_PLAN.md  SHORT_TERM_MEMORY_DESIGN.md  TEAMS_BOT_DEPLOYMENT.md  TOOL_UNIFICATION_PLAN.md  guide_eng.md
eval/: README.md  gold_runner.py
eval/agent_quality/: judge.py  results.json  results_bedrock.json  results_qwen.json  run.py  run_bedrock.py  run_qwen.py  run_tool_parity.py
eval/code_review/: GREPTILE_BENCHMARK.md  import_greptile.py  judge.py  materialize_greptile_bases.py  report.py  run.py  run_comparison.py  runner.py  scorer.py  scrape_greptile.py  setup_greptile_dataset.py
eval/gold_traces/: requests-001_20260317T142619Z.json  requests-001_20260317T143347Z.json  requests-002_20260317T143347Z.json  requests-006_20260317T143347Z.json  requests-007_20260317T143347Z.json  requests-009_20260317T143347Z.json
eval/tool_parity/: baseline.json  run.py
extension/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
extension/grammars/: grammars.sha256
extension/media/: chat.html  tailwind.css  webview.css  webview.js
extension/scripts/: download-grammars.sh
extension/src/: extension.ts
extension/tests/: run_complex_tool.js  validate_contract.js
scripts/: generate_tool_contracts.py  update-prompt-library.sh
teams-bot/: .gitignore  README.md  build.py  manifest.template.json
(+230 files in other folders)
