[project]
name = "conductor"
requires-python = ">=3.12"

# ---------------------------------------------------------------------------
# Ruff — linter + import sorter (replaces flake8, isort, pyflakes, pycodestyle)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by black
    "B008",   # do not perform function call in argument defaults (FastAPI Depends)
    "B905",   # zip without strict= — too noisy for existing code
    "SIM108", # use ternary operator — readability preference
    "RUF012", # mutable class variable — too strict for dataclasses
    "UP006",  # use list instead of List — cosmetic, defer to a separate PR
    "UP007",  # use X | Y for union types — keep Optional[] for clarity
    "UP035",  # deprecated typing imports — cosmetic, defer to a separate PR
    "UP045",  # Optional[X] → X | None — keep Optional[] for clarity
    "RUF001", # ambiguous unicode — en-dashes in regexes are intentional
    "RUF002", # ambiguous unicode in docstrings — Chinese text is intentional
    "RUF003", # ambiguous unicode in comments — Chinese text is intentional
    "RUF005", # collection-literal-concatenation — [*a, *b] vs a + b preference
    "RUF013", # implicit-optional — same as UP007/UP045 family
    "UP042",  # replace-str-enum — StrEnum migration is a separate effort
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["B011", "SIM300", "E402", "E702"]  # assert False, yoda conditions, conftest stubs, semicolon drain patterns
"backend/app/code_tools/tools.py" = ["B028"]  # stacklevel in warnings — legacy code
"backend/app/chat/router.py" = ["E402"]  # logger before imports (intentional pattern)

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py312"]
line-length = 120

# ---------------------------------------------------------------------------
# Mypy — static type checker (Phase 11.3)
# ---------------------------------------------------------------------------
# Strategy: the codebase has ~2000 existing type errors in legacy modules
# (resolver.py, wrapper.py, older tool helpers). Rather than block on
# fixing all of them, we check the SELECTED high-quality modules in
# strict mode and keep the rest in permissive (ignore_errors) mode. New
# code should ship under the strict-checked modules and reduce the
# permissive list over time.
#
# Usage:
#   make typecheck          # run mypy across the repo
#   make typecheck-strict   # only the strict-checked modules
[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
explicit_package_bases = true
namespace_packages = true
# Base config — permissive. Override per-module below.
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = false  # legacy code relies on implicit None defaults
check_untyped_defs = false
disallow_untyped_defs = false

# --- Strict-checked modules (reviewed, fully annotated) ---
[[tool.mypy.overrides]]
module = [
    "app.code_review.splitter",
    "app.code_review.translate",
    "app.scratchpad.*",
]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true

# --- Legacy / 3rd-party stubs missing — ignore import errors ---
[[tool.mypy.overrides]]
module = [
    "cocoindex.*",
    "sentence_transformers.*",
    "sqlite_vec.*",
    "tree_sitter.*",
    "tree_sitter_language_pack.*",
    "ast_grep_py.*",
    "networkx.*",
    "playwright.*",
]
ignore_missing_imports = true

# --- Tests — skip strict checking (many MagicMock / fixture patterns) ---
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
